認証メール送信Serviceを作成

--- a/src/main/resources/templates/register/send.html
+++ b/src/main/resources/templates/register/send.html
@@ -12,8 +12,8 @@
         <span class="sm:text-2xl text-lg font-medium my-2" th:text="${email}"></span>
         <p class="my-2">メールが届かない場合は再送信を押してください</p>
     </div>
-    <form th:action="@{/register/send}" method="post">
-        <input type="hidden" name="email" th:value="${email}">
+    <form th:action="@{/register/send}" th:object="${sendVerifyEmailMailFrom}" method="post">
+        <input type="hidden" th:field="*{email}">
         <button type="submit" class="button-primary" style="max-width: 7.375rem">再送信</button>
     </form>
 </main>
