表示が出来るように修正

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -21,9 +21,11 @@
             //     useFerry: true,
             //     maxWalkingTime: 1
             // };
+            // todo: 経路情報乗っける
             // initializeMaps(placeIds, travelModes, options);
             initializeMaps();
-            initAutoComplete();
+            // todo: autocomplete.jsが完成したら
+            // initAutoComplete();
             window.closePopup = function() {
                 openPopupMap(placeIds,travelModes,options);
             }
